--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
     "description": "francophone map english",
     "author": "NEDGREEF",
     "dependencies": {
-        "http-server": "^0.12.3",
-        "smk": "^1.0.0-beta.9"
+        "@bcgov/smk": "1.0.4"
     },
     "scripts": {
         "view": "http-server -o -c-1"
+    },
+    "devDependencies": {
+        "http-server": "^0.12.3"
     }
 }
